progress on us1

--- a/app/views/dishes/show.html.erb
+++ b/app/views/dishes/show.html.erb
@@ -1,3 +1,9 @@
 <h1>Dish: <%= @dish.name %></h1>
 
 <h3>Description: <%= @dish.description %></h3>
+<p>Ingredients:
+<ul>
+  <% @dish.dish_ingredients.each do |dish_ingredient| %>
+    <li><%= dish_ingredient.ingredient.name %></li>
+  <% end %>
+</ul>
