--- a/app/views/dishes/show.html.erb
+++ b/app/views/dishes/show.html.erb
@@ -7,3 +7,7 @@
     <li><%= dish_ingredient.ingredient.name %></li>
   <% end %>
 </ul>
+
+<p>Total Calorie: <%= @dish.total_calorie %></p>
+
+<h3>Prepared by chef <%= @dish.chef.name %></h3>
