--- a/app/views/chefs/show.html.erb
+++ b/app/views/chefs/show.html.erb
@@ -6,3 +6,10 @@
     <li><%= dish.name %></li>
   <% end %>
 </ul>
+
+<%= form_with url: dish_path(:dish_id), method: :patch, local: true do |form| %>
+  <%= form.label :dish_id %>
+  <%= form.number_field :dish_id %>
+  <%= form.hidden_field :chef_id, value: @chef.id %>
+  <%= form.submit "Add Dish"%>
+<% end %>
