spec for unique ingredients chef instance method

--- a/app/views/chefs/show.html.erb
+++ b/app/views/chefs/show.html.erb
@@ -13,3 +13,5 @@
   <%= form.hidden_field :chef_id, value: @chef.id %>
   <%= form.submit "Add Dish"%>
 <% end %>
+
+<%= link_to "Chef #{@chef.name}'s Ingredients", "/chefs/#{@chef.id}/ingredients" %>
